finished CSS for Movielist and Footer

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,12 +1,29 @@
 @import 'vars'
 
+html, body, .wrapper
+    min-height: 100vh
+
 .wrapper
     font: 
         size: 16px
         family: Roboto, sans-serif
+
+    background-color: $neutral_bg
 
 .button
     border: none
     font-family: inherit
     cursor: pointer
     background-color: inherit
+
+footer
+    color: white
+    background-color: $primary
+    text: 
+        align: center
+        transform: uppercase
+
+    padding: 
+        top: 1rem
+        bottom: 1rem
+    width: 100%
