--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -34,7 +34,7 @@
         border-radius: $b_radius 0px 0px $b_radius
 
         &:hover
-            background-color: $neutral_bg
+            background-color: $menu_hover
 
     &__text
         border: none
