--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,7 +1,8 @@
 $primary: #24292e
 $secondary: #2ea44f
 $tertiary: #79b8ff
-$neutral_bg: #ebebeb
+$neutral_bg: #131313
+$menu_hover: #d4d4d4
 
 $b_radius: 5px
 
