--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -17,7 +17,7 @@ html, body, .wrapper
     background-color: inherit
 
 footer
-    color: white
+    color: gray
     background-color: $primary
     text: 
         align: center
