--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -22,7 +22,9 @@
 .search
     background-color: white
     border-radius: $b_radius
+    height: 2rem
     @extend %flex
+    position: relative
 
     &__flyout_menu
         border-right: 1px solid gray
@@ -32,9 +34,10 @@
             weight: bold
         height: 100%
         border-radius: $b_radius 0px 0px $b_radius
+        transition: $anim
 
         &:hover
-            background-color: $menu_hover
+            filter: brightness(0.85)
 
     &__text
         border: none
