--- a/src/styles/MovieList.sass
+++ b/src/styles/MovieList.sass
@@ -19,22 +19,27 @@
         justify-content: flex-start
         flex-direction: column
         box-sizing: content-box
-        width: 58%
+        width: 60%
         height: 24rem
         margin-top: 4rem
-        padding: 1.5rem 2rem
+        padding: 1.5rem 1.8rem
         color: white
         background-color: $primary
         border-radius: $b_radius
         cursor: pointer
-        transition: all 0.1s ease-out
+        transition: $anim
 
         &:hover
             transform: scale(1.1)
 
     &__poster
-        height: 80%
         border-radius: $b_radius
+        height: 80%
+        width: 100%
+
+    &__img
+        max-width: 100%
+        max-height: 100%
 
     &__info
         @extend %flex
@@ -47,7 +52,13 @@
     &__title
         height: 2.5rem
 
-    &__year
+    &__details
+        @extend %flex
+        justify-content: space-between
+        width: 100%
         font-size: 0.8rem
         margin-top: 0.6rem
         color: $tertiary
+        
+    &__type
+        text-transform: capitalize
