--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -2,8 +2,7 @@ $primary: #24292e
 $secondary: #2ea44f
 $tertiary: #79b8ff
 $neutral_bg: #131313
-$menu_hover: #d4d4d4
-
+$anim: all 0.1s ease-out
 $b_radius: 5px
 
 %flex
