--- a/src/common.blocks/Header/FlyoutMenu/FlyoutMenu.sass
+++ b/src/common.blocks/Header/FlyoutMenu/FlyoutMenu.sass
@@ -4,7 +4,7 @@
     margin: 0
     position: absolute
     top: 32px
-    left: 0
+    right: 342px
     width: 150px
     background-color: lighten($primary, 6%)
     border: 0 solid lighten($primary, 6%)
