--- a/src/common.blocks/Header/Header.sass
+++ b/src/common.blocks/Header/Header.sass
@@ -7,17 +7,18 @@
         background-color: $secondary
         border-radius: $b_radius
         padding: 0.3rem 0.6rem
+        cursor: pointer
 
     &__title
         font:
             family: Impact,'Arial Narrow Bold'
             size: 2rem
     
-    &_margin
+    &-margin
         margin-right: 10%
 
 
-.search
+.search, .search__form
     background-color: white
     border-radius: $b_radius
     height: 2rem
