--- a/src/App.sass
+++ b/src/App.sass
@@ -11,15 +11,19 @@ $b_radius: 5px
     justify-content: center
     align-items: center
 
-html, body, .wrapper
-    min-height: 100vh
-
 .wrapper
     font: 
         size: 16px
         family: Roboto, sans-serif
+    min-height: 100vh
+    @extend %flex
+    flex-direction: column
+    align-items: stretch
 
     background-color: $neutral_bg
+
+.section
+    flex-grow: 1
 
 .button
     border: none
@@ -40,5 +44,6 @@ footer
     width: 100%
 
 @import 'common.blocks/Header/Header'
+@import 'common.blocks/Home/Home'
 @import 'common.blocks/MovieList/MovieList'
 @import 'common.blocks/Header/FlyoutMenu/FlyoutMenu'
