--- a/src/common.blocks/MovieList/MovieList.sass
+++ b/src/common.blocks/MovieList/MovieList.sass
@@ -8,7 +8,7 @@
         padding-bottom: 5rem
         background-color: $bright_bg
 
-    &__error
+    &__message
         font-size: 2.5rem
         align-self: flex-start
         margin-top: 10rem
