Fixes and tweaks
Fixed the display for long movie titles and added the feature to save the user's query on reload.

--- a/src/common.blocks/Header/Header.sass
+++ b/src/common.blocks/Header/Header.sass
@@ -6,8 +6,12 @@
     &__logo
         background-color: $secondary
         border-radius: $b_radius
+        transition: $anim
         padding: 0.3rem 0.6rem
         cursor: pointer
+
+        &:hover
+            background-color: lighten($secondary, 10%)
 
     &__title
         font:
