--- a/src/common.blocks/MovieList/MovieList.sass
+++ b/src/common.blocks/MovieList/MovieList.sass
@@ -53,7 +53,14 @@
         margin-top: 0.8rem
 
     &__title
-        height: 2.5rem
+        height: 2rem
+        margin-bottom: 0.5rem
+        overflow: hidden
+        text-overflow: ellipsis
+        display: -webkit-box
+        -webkit-line-clamp: 2
+        -webkit-box-orient: vertical
+
 
     &__details
         @extend %flex
