--- a/src/common.blocks/MovieList/MovieList.sass
+++ b/src/common.blocks/MovieList/MovieList.sass
@@ -1,6 +1,7 @@
 .movielist
     @extend %flex
     align-items: stretch
+    width: 100%
     &__wrapper
         @extend %flex
         flex-wrap: wrap
