--- a/src/App.sass
+++ b/src/App.sass
@@ -18,7 +18,6 @@ $b_radius: 5px
     min-height: 100vh
     @extend %flex
     flex-direction: column
-    align-items: stretch
 
     background-color: $neutral_bg
 
@@ -32,20 +31,30 @@ $b_radius: 5px
     cursor: pointer
     background-color: inherit
 
-footer
+.footer
     color: gray
+    font-size: 1.5rem
     background-color: $primary
-    text: 
-        align: center
-        transform: uppercase
-
+    text-align: center
     padding: 
         top: 1rem
         bottom: 1rem
-    width: 100%
+    width: 80%
+
+    &__text
+        display: block
+        margin:
+            top: 1rem
+            bottom: 1rem
+
+    &__contact
+        text-decoration: underline
+        font-weight: 700
+        cursor: pointer
 
 @import 'common.blocks/Header/Header'
 @import 'common.blocks/Header/FlyoutMenu/FlyoutMenu'
 @import 'common.blocks/Home/Home'
 @import 'common.blocks/MovieList/MovieList'
 @import 'common.blocks/MovieList/MovieCard/MovieCard'
+@import 'common.blocks/Modal/Modal'
