--- a/src/common.blocks/Modal/Modal.sass
+++ b/src/common.blocks/Modal/Modal.sass
@@ -1,11 +1,13 @@
 .modal 
     position: fixed
     z-index: 2
+    top: 0
+    left: 0
 
     &__content
         position: absolute
-        background-color: $primary
-        border-radius: $main_b-radius
+        background-color: $bright_bg
+        border-radius: $b_radius
         z-index: 3
         width: 400px
         top: 50vh
@@ -23,9 +25,14 @@
             font-size: 24px
 
     &__title
-        margin-bottom: 50px
+        margin:
+            top: 1rem
+            bottom: 3rem
 
     &__sm
+        @extend %flex
+        list-style: none
+        margin: 0
         column-gap: 20px
         img
             width: 32px
@@ -33,8 +40,8 @@
     &__close-button
         position: absolute
         cursor: pointer
-        width: 22px
-        height: 22px
+        width: 32px
+        height: 32px
         top: 14px
         right: 18px
 
@@ -49,5 +56,5 @@
         position: absolute
         width: 100vw
         height: 100vh
-        background-color: $dark
+        background-color: black
         opacity: 0.4
